--- a/app/assets/javascripts/templates/editMyProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/editMyProfileTemplate.hbs
@@ -38,7 +38,7 @@
       </select>
     </div><br>
 
-      <button type="button" class="btn btn-primary" data-id={{user.id}} id="edit-profile">Edit My Profile</button>
+      <button type="button" class="btn btn-primary" data-id={{user.id}} id="edit-profile-btn">Edit My Profile</button>
 
   </div>
 
