--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -1,7 +1,7 @@
 <div class="boxframe">
   <img src="http://covers.openlibrary.org/b/isbn/{{isbn}}M.jpg?default=false" alt='bookcover' onerror="this.src='/assets/no-image-l.png'" style="width:178px;height:255px;">
 
-  <h3 class='boxframe-title'>Title: {{data.book.title}}</h3>  
+  <h3 class='boxframe-title'>{{data.book.title}}</h3>  
   <p class='boxframe-subj'>Author: </p>
   <p class='boxframe-desc'>{{data.book.authorFullName}}</p>
   <p class='boxframe-subj'>Genre(s):</p>
@@ -14,16 +14,16 @@
   <p class='boxframe-desc'>{{data.book.description}}</p>
 
   {{#if data.trade.book_first_trader_wants_id}}
-  <div id='trader1-rating'>Trader's Rating: {{data.trade.first_trader_rating}}
-  </div>
+  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}}
+  </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="complete-trade-btn">Complete a Trade</button>
   {{else if data.trade.status}}
-  <div id='trader1-rating'>Trader's Rating: {{data.trade.first_trader_rating}}
-  </div>
+  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}}
+  </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="request-trade-btn">Request a Trade</button>
   {{else}} 
     <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="edit-book-btn">Edit This Book</button>
-    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')" >Delete This Book</button>
+    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
   {{/if}}
 </div>
 <hr>
