added filters for user model addresses

--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -1,14 +1,16 @@
 <div class='boxframe'><h2>Your Profile: </h2>
-  <p><strong>Your Real Name: {{user.real_name}}</strong></p>
-  <p><strong>Your Street Address: {{user.street}} </strong></p>
-  <p><strong>Your City: {{user.city}}</strong></p>
-  <p><strong>Your State: {{user.state}}</strong></p>
-  <p><strong>Your Zipcode: {{user.zipcode}} </strong></p>
-  <p><strong>Your Role: {{user.role}} </strong></p>
+  <p><strong>Your Real Name: {{data.data.user.real_name}}</strong></p>
+  <p><strong>Your Street Address: {{data.user.street}} </strong></p>
+  <p><strong>Your City: {{data.user.city}}</strong></p>
+  <p><strong>Your State: {{data.user.state}}</strong></p>
+  <p><strong>Your Zipcode: {{data.user.zipcode}} </strong></p>
+  <p><strong>Your Role: {{data.user.role}} </strong></p>
   <p><strong>Your Books: (This can be removed later, just an experiment)</strong></p>
-  {{#user.books}}
+  {{#data.books}}
    <p>{{title}}</p>
-  {{/user.books}}
-  <button type="button" class="btn btn-primary" data-id={{user.id}} id="edit-profile">Edit My Profile</button>
+  {{/data.books}}
+  <p><strong>Your email: </strong><%= @data.user.email %></p>
+  <p><strong>Your Current Rating:{{data.rating}} out of 3 (3 is best)</strong></p>
+  <button type="button" class="btn btn-primary" data-id={{data.user.id}} id="edit-profile">Edit My Profile</button>
 </div>
 
