fixed template issue for return value

--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -10,7 +10,7 @@
    <p>{{title}}</p>
   {{/data.books}}
   <p><strong>Your email: </strong>{{data.user.email}}</p>
-  <p><strong>Your Current Rating:{{data.rating}} out of 3 (3 is best)</strong></p>
+  <p><strong>Your Current Rating:<span> {{data.rating}} out of 3 (3 is best)</strong></p>
   <button type="button" class="btn btn-primary" data-id={{data.user.id}} id="edit-profile">Edit My Profile</button>
 </div>
 
