--- a/app/views/home/logged_in.html.erb
+++ b/app/views/home/logged_in.html.erb
@@ -1,5 +1,5 @@
 <h2><%= current_user.first_name %>'s Homepage!</h2>
 
-  <div id="msg-area"></div>
+  <p id="msg-area"></p>
   <br></br>
   <div id="display-area"></div>
