--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="boxframe">
   <h2>Edit Shipping Info</h2>
 
-  <p><i>Remember, if any of the fields below are blank, you must update them to add or trade books</i><p>
+  <div class="remember">Remember, if any of the fields below are blank, you must update them to add or trade books</div><br>
 
   <%= form_for @user do |f| %>
     <div class="field" >
