--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
   <nav class="admin_nav">
     <h2>***ADMIN***</h2>
     <ul>
-      <li><%= link_to "View/Delete Users", users_path %> </li>
+      <li><%= link_to "View/Edit Users", users_path %> </li>
     </ul>
 
   <% elsif current_user && current_user.mod? %>
