--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,7 @@ hr {
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #008B8B;
+    border-top: 1px solid #00BFFF;
     margin: 1em 0;
     padding: 0; 
 }
@@ -59,14 +59,10 @@ p.notice {
 p.alert {
   color: #D8000C;
   background-color: #FFBABA;
-  padding: 5px 0px 5px 20px;
+  padding: 10px 0px 10px 20px;
   font-size: 120%;
 }
 
-#msg-area {
-    color: #9F6000;
-    background-color: #FEEFB3;
-}
 
 .indent {
   margin-left: 30px;
