--- a/app/assets/javascripts/templates/allBooksTemplate.hbs
+++ b/app/assets/javascripts/templates/allBooksTemplate.hbs
@@ -5,7 +5,7 @@
 {{#books}}
 <div class="boxframe">
 <img src="http://covers.openlibrary.org/b/isbn/{{isbn}}-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
-<h3>{{title}}</h3>
+<h3>{{book.title}}</h3>
 <p>Author: {{author_first_name}} {{author_last_name}}</p></br>
 <button type='button' class='btn btn-primary btn-xs show-book-btn' data-value1='{{user_id}}' data-value2='{{id}}'>Click for More</button>
 </div>
