--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -1,59 +1,4 @@
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>LibbyLibby</title>
-  <link rel="stylesheet" media="all" href="/assets/application-d142dd9ec7bb50623885c231a326cfaa3cd325d604641f39939b80e9aaba765c.css" />
-  <script src="/assets/application-905663dc98c23003ee7b7852292574faf08b3bf250619fc514e2d13a1853e355.js"></script>
-  <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="SlyHWS5SxpRatWfy7Zwg1+d5oJVg0ZsjNs/WoeIWReFzlF2OMhQrLZrY81y57d4GqC8JVyz7AW3S1xhp2AnTzg==" />
-  
-
-        <div id="container">
-                <img id="banner-img" <img src="/assets/banner1-76e2d4567dbd8430e4c61bac2e29c85821365b43f59cd68e4c1bcd21332ac403.png" alt="Banner1" />
-        </div>
-
-
-
-    <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="u13nhLya4fJgMSik3JG0CgkFUPmKvMglA3rr9m+LpumClT1ToNwMS6BcvAqI4ErbRlP5O8aWUmvnYiU+VZQwxg==" />
-    <link rel="stylesheet" media="all" href="/assets/application-d142dd9ec7bb50623885c231a326cfaa3cd325d604641f39939b80e9aaba765c.css" data-turbolinks-track="reload" />
-    <script src="/assets/application-905663dc98c23003ee7b7852292574faf08b3bf250619fc514e2d13a1853e355.js" data-turbolinks-track="reload"></script>
-    <p class="notice"></p>
-       <p class="alert"></p>
-
-  </head>
-
-  <header>
-      <p class="navbar-text pull-right">
-
-    Signed in as <strong>user1@user1.com</strong> |
-    <a class="navbar-link" rel="nofollow" data-method="delete" href="/users/sign_out">Sign out</a>
-<br>
-
-
-  <hr>
-  <input type="image" class="col-xs-12 col-md-3" id="all-books-btn" <img src="/assets/all-books-btn-535c6a84d7b26999aa78a692c94986ce63dd05969f79bc60e7c289cab9a435b7.png" alt="All books btn" />
-  <input type="image" class="col-xs-12 col-md-3" id="my-profile-btn" data-id="4" <img src="/assets/my-profile-btn-c02759be434c44e7d3a6945e460dbb8cb0d9c513c92b381300b36e737fc87e07.png" alt="My profile btn" />
-  <input type="image" class="col-xs-12 col-md-3"id="my-books-btn" data-id="4" <img src="/assets/my-books-btn-803a565e22779d157ff15cd6e0fb755fa9534af027a375a44065043dccc7a947.png" alt="My books btn" />
-  <input type="image" class="col-xs-12 col-md-3"id="my-trades-btn" data-id="4" <img src="/assets/my-trades-btn-e5601d3bda5a3f460a727a541f00f8364ae4f2b5b07dc022d414926794fd7da9.png" alt="My trades btn" />
-  
-    <nav class="logged_in_nav">
-        <ul>
-          <li> <a href="/users/4">See My Profile</a> </li>
-          <li> <a href="/books">Browse All Books</a> </li>
-          <li> <a href="/users/4/books">See My Books</a> </li>
-          <li> <a href="/trades">See My Trades</a> </li>
-      </ul>
-    </nav> 
-</header>
-<hr>
-
-
-
-
-
-  <body>
     <h1>Edit a Book</h1>
 <i>All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</i><br /><br />
 
@@ -101,27 +46,13 @@ It&#39;s great. People tell me.</textarea>
   </div>
   <br />
 
-  <div class="submit">
+  <button id="test" data-user="{{data.book.user_id}}" data-book="{{data.book.id}}">Test click</button>
+
+<!--   <div class="submit">
     <input type="submit" name="commit" value="Update Book" data-disable-with="Update Book" /><br />
-  </div>
+  </div> -->
   
 </form>
 
 
 
-  </body>
-  <footer>
-   
-<p><form class="button_to" method="get" action="/users/edit.4"><input class="btn btn-primary" type="submit" value="Change My Password" /></form></p>
-
-<p><form class="button_to" method="get" action="/users/4/edit"><input class="btn btn-primary" type="submit" value="Edit My Profile" /></form></p>
-
-<p><form class="button_to" method="post" action="/users?as=accounts"><input type="hidden" name="_method" value="delete" /><input class="btn btn-primary" data-confirm="Are you sure?" type="submit" value="Delete My Account" /><input type="hidden" name="authenticity_token" value="hgQn+Vf+x54Z5hTjC/8qOWz9O37gYrUKP+xNtFmY297HchHMzGOAqe1fUA9NHbAoYz+udi9KQ8vDc9qSJulgwQ==" /></form></p>
-
-    <div class='little-text'>
-    </br >
-    <hr>
-      Images Provided by <a href="http://www.openlibrary.org">The Open Library Project</a> 
-    </div>
-  </footer>
-</html>
