--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -3,3 +3,118 @@
 
 
 
+<h2>Your Trades (if any):</h2>
+</br >
+
+<div class="list-group">
+  <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
+  <% @my_trades.each do |trade| %>
+    <% if trade.second_trader == @user && trade.status == "new" %>
+      <p class="list-group-item-text"><a href="mailto:<%= trade.first_trader.email %>?subject=LibbyLibby Trade"><%= trade.first_trader.email %></a> requested <%= trade.first_book.title %> from you on <%= trade.created_at.strftime("%b %d %Y") %>, and he/she is still waiting for your response/trade</p>
+      <p><%= link_to "See User's Books", user_books_path(trade.first_trader.id), class: "btn btn-primary" %></p>
+      <p><%= button_to "Delete/Refuse Trade", trade_path(trade), data: {confirm: "Are you sure?" }, method: :delete, class: "btn btn-primary" %></p>
+    <% end %>
+  <% end %>
+</div>
+
+<div class="list-group">
+<h4 class="list-group-item-heading">Trades You Requested Which Aren't Complete:</h4>
+<% @my_trades.each do |trade| %>
+  <% if trade.first_trader == @user && trade.status == "new" %>
+      <p class="list-group-item-text">You requested <%= trade.first_book.title %> from <a href="mailto:<%= trade.second_trader.email %>?subject=LibbyLibby Trade"><%= trade.second_trader.email %></a> on <%= trade.created_at.strftime("%b %d %Y") %> and you're still waiting for a response </p>
+
+      <p><%= button_to "Delete/Cancel Trade", trade_path(trade), data: {confirm: "Are you sure?" }, method: :delete %></p>
+   <% end %>
+<% end %>
+</div>
+
+<div class="list-group">
+<h4 class="list-group-item-heading">Completed Trades:</h4>
+
+<% @my_trades.each do |trade| %>
+  <% if trade.second_trader == @user && trade.status == "completed" %>
+    <p class="list-group-item-text"><%= trade.first_trader.email %> requested <strong><%= trade.first_book.title %></strong> from you, and you traded <strong><%= trade.book_second_trader_wants.title %></strong> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p><br />
+
+      <% if trade.book_second_trader_wants_second_trader_rating.nil? %>
+        <% @trade = trade %>
+        <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p>
+
+       <%= form_for trade, url: trade_path(trade) do |f| %>
+
+          <b>Rating</b><br />
+          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
+          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '2' %> There were some problems which were eventually resolved<br />
+          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '1' %> The book never arrived/was in awful condition<br />
+
+           <%= f.submit 'Rate this Reader' %><br />
+
+      <% end %>
+    <% end %>
+
+
+    <p class="list-group-item-text"><strong>Be sure to mail <%= trade.first_book.title %> to:</strong></p>
+
+      <%= trade.book_second_trader_wants.user.real_name %><br />
+      <%= trade.book_second_trader_wants.user.street %><br />
+      <%= trade.book_second_trader_wants.user.city %><br />
+      <%= trade.book_second_trader_wants.user.state %><br />
+      <%= trade.book_second_trader_wants.user.zipcode %><br />
+
+  <% end %>
+<% end %>  
+
+<% @my_trades.each do |trade| %>
+  <% if trade.first_trader == @user && trade.status == "completed" %>
+
+    <p class="list-group-item-text">You requested <%= trade.first_book.title %> from <% trade.second_trader %>, and he/she traded <%= trade.book_second_trader_wants.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p>
+    <% if trade.first_book_second_trader_rating.nil? %>
+
+      <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p>
+
+      <%= form_for trade do |f| %>
+
+          <b>Rating</b><br />
+          <%= f.radio_button :first_book_second_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
+          <%= f.radio_button :first_book_second_trader_rating, '2' %> There were some problems which were eventually resolved<br />
+          <%= f.radio_button :first_book_second_trader_rating, '1' %> The book never arrived/was in awful condition<br />
+
+          <%= f.submit 'Rate this Reader' %><br />
+
+      <% end %>
+    <% end %>
+
+
+      <p class="list-group-item-text">Be sure to mail <%= trade.book_second_trader_wants.title %> to:</p>
+
+      <%= trade.first_book.user.real_name %><br />
+      <%= trade.first_book.user.street %><br />
+      <%= trade.first_book.user.city %><br />
+      <%= trade.first_book.user.state %><br />
+      <%= trade.first_book.user.zipcode %><br />
+
+
+  <% end %>
+<% end %> 
+</div>
+
+    @my_trades = Trade.my_trades(current_user)
+    if @my_trades.empty?
+      @msg = "You don't have any trades yet!"
+    else
+      @msg = "Check out your trades below..."
+    end
+    @my_trades.each do |trade|
+      if trade.first_trader == current_user && trade.book_second_trader_wants_id.nil?
+        @my_initiated_trades << trade  
+      elsif trade.second_trader == current_user && book_second_trader_wants_id.nil?
+        @my_must_respond_trades << trade
+      elsif trade.status == "complete"
+        @my_completed_trades << trade
+      end
+    end
+    respond_to do |f|
+      flash.now[:notice] = @msg
+      f.html { render :index }
+      f.json { render :json => { :my_initiated_trades => @my_initiated_trades, :my_must_respond_trades => @my_must_respond_trades, :my_completed_trades => @my_completed_trades, :msg => @msg }}
+    end
+  end
