--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -17,7 +17,7 @@
   <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}} out of 3 (3 is best)
   </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="complete-trade-btn">Complete a Trade</button>
-  {{else if data.trade.status}}
+  {{else if data.trade.status}}<!---
   <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}} out of 3 (3 is best)
   </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="request-trade-btn">Request a Trade</button>
