added js functions for rendering json edit page

--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -1,5 +1,5 @@
 <div class="boxframe">
-  <img src="http://covers.openlibrary.org/b/isbn/{{isbn}}M.jpg?default=false" alt='bookcover' onerror="this.src='/assets/no-image-l.png'" style="width:178px;height:255px;">
+  <img src="http://covers.openlibrary.org/b/isbn/{{data.book.isbn}}-M.jpg?default=false" alt='bookcover' onerror="this.src='/assets/no-image-l.png'" style="width:178px;height:255px;">
 
   <h3 class='boxframe-title'>{{data.book.title}}</h3>  
   <p class='boxframe-subj'>Author: </p>
