--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@ body {
 
 input[type='checkbox'] {
    margin-left: 20px;
+   margin-right: 5px !important;
 }
 
 .field, .text_area, .radio_field, .checkboxes {
