--- a/app/assets/javascripts/templates/allBooksTemplate.hbs
+++ b/app/assets/javascripts/templates/allBooksTemplate.hbs
@@ -7,7 +7,7 @@
 <img src="http://covers.openlibrary.org/b/isbn/{{isbn}}-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
 <h3>{{this.title}}</h3>
 <p>Author: {{this.author_first_name}} {{this.author_last_name}}</p></br>
-<button type='button' class='btn btn-primary btn-xs show-book-btn' data-value1='{{user_id}}' data-value2='{{id}}'>Click for More</button>
+<button type='button' class='btn btn-primary btn-xs show-book-btn' data-user='{{user_id}}' data-book='{{id}}'>Click for More</button>
 </div>
 {{/each}} 
 <div class="centered">
