fleshed out edit book form for json

--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -54,7 +54,7 @@
   </div>
   <br />
 
-  <button id="test" data-user="{{data.book.user_id}}" data-book="{{data.book.id}}">Test click</button> 
+  <button id="update-json" data-user="{{data.book.user_id}}" data-book="{{data.book.id}}">Update This Book</button> 
 
 <!--   <<div class="submit">
     <input type="submit" name="commit" value="Update Book" data-disable-with="Update Book" /><br />
