--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -1,29 +1,33 @@
 <div class="boxframe">
-  <img src="http://covers.openlibrary.org/b/isbn/{{data.book.isbn}}-M.jpg?default=false" alt='bookcover' onerror="this.src='/assets/no-image-l.png'" style="width:178px;height:255px;">
+  <img src="http://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg?default=false" alt='bookcover' onerror="this.src='/assets/no-image-l.png'" style="width:178px;height:255px;">
 
-  <h3 class='boxframe-title'>{{data.book.title}}</h3>  
+  <h3 class='boxframe-title'>{{book.title}}</h3>  
   <p class='boxframe-subj'>Author: </p>
-  <p class='boxframe-desc'>{{data.book.authorFullName}}</p>
+  <p class='boxframe-desc'>{{book.authorFullName}}</p>
   <p class='boxframe-subj'>Genre(s):</p>
+  {{#each book.genres}}
+  <p class='boxframe-desc'>{{this.name}}</p>
+  {{/each}}
 
   <p class='boxframe-subj'> ISBN: </p>
-  <p class='boxframe-desc'>{{data.book.isbn}}</p>
+  <p class='boxframe-desc'>{{book.isbn}}</p>
   <p class='boxframe-subj'>Condition:</p>
-  <p class='boxframe-desc'>{{data.book.condition}}</p>
+  <p class='boxframe-desc'>{{book.condition}}</p>
   <p class='boxframe-subj'>Description:</p>
-  <p class='boxframe-desc'>{{data.book.description}}</p>
+  <p class='boxframe-desc'>{{book.description}}</p>
 
-  {{#if data.trade.book_first_trader_wants_id}}
-  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}} out of 3 (3 is best)
+
+  {{#if trade.book_first_trader_wants_id}}
+  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best)
   </div><br>
-    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="complete-trade-btn">Complete a Trade</button>
-  {{else if data.trade.status}}<!---
-  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{data.other_trader_rating}} out of 3 (3 is best)
+    <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="complete-trade-btn">Complete a Trade</button>
+  {{else if trade.status}}
+  <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best)
   </div><br>
-    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="request-trade-btn">Request a Trade</button>
+    <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="request-trade-btn">Request a Trade</button>
   {{else}} 
-    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="edit-book-btn">Edit This Book</button>
-    <button type="button" class="btn btn-primary btn-xs" data-user={{data.book.user_id}} data-book={{data.book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
+    <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="edit-book-btn">Edit This Book</button>
+    <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
   {{/if}}
 </div>
 <hr>
