--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -1,6 +1,6 @@
 
 <h3>Edit a Book</h3>
-<form class="edit_book" id="edit_book_{{book.id}}">
+form class="edit_book" id="edit_book_{{book.id}}">
 <p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br /><br />
 
 <label>Title</label>
@@ -54,14 +54,9 @@
   </div>
   <br />
 
-  <button id="update-json" data-user="{{data.book.user_id}}" data-book="{{data.book.id}}">Update This Book</button> 
-
-<!--   <<div class="submit">
-    <input type="submit" name="commit" value="Update Book" data-disable-with="Update Book" /><br />
-  </div>  -->
+  <button id="update-json" data-user="{{book.user_id}}" data-book="{{book.id}}" class="btn btn-primary btn-xs">Update This Book</button> 
   
-  
-</form>
+  </form>
 
 
 
