retooled handlebar templating

--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -1,11 +1,8 @@
 
 <h3>Edit a Book</h3>
 
-<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br /><br />
+<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br />
 
-<label>Title</label>
-
-<!-- <input type="text" id="book_title" value="{{book.title}}" placeholder="{{book.title}}" size="50" > -->
   <div class="centerbox">
     <div class="field">
       <label for="book_title">Title</label><br />
@@ -40,7 +37,7 @@
     <div class="text_area">
       <label for="book_description">Description</label><br />
       <textarea name="book[description]" id="book_description" cols="50">{{book.description}}
- </textarea>
+      </textarea>
     </div>
 
     <b>Genre(s): </b>
@@ -54,7 +51,7 @@
   </div>
   <br />
 
-  <button id="update-json" data-user="{{book.user_id}}" data-book="{{book.id}}" class="btn btn-primary btn-xs">Update This Book</button> 
+  <button id="update-book-btn" data-user="{{book.user_id}}" data-book="{{book.id}}" class="btn btn-primary btn-xs">Update This Book</button> 
   
 
 
