--- a/app/assets/javascripts/templates/newBookForm.hbs
+++ b/app/assets/javascripts/templates/newBookForm.hbs
@@ -1,30 +1,27 @@
 
-<h3>Edit a Book</h3>
+<h3>Create a Book</h3>
 
-<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br /><br />
+<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br />
 
-<label>Title</label>
-
-<!-- <input type="text" id="book_title" value="{{book.title}}" placeholder="{{book.title}}" size="50" > -->
   <div class="centerbox">
     <div class="field">
       <label for="book_title">Title</label><br />
-      <input type="text" id="book_title" value="{{book.title}}" placeholder="{{book.title}}" size="50" >
+      <input type="text" id="book_title" size="50" >
     </div>  
 
     <div class="field">
       <label for="book_author_last_name">Author last name</label><br />
-      <input type="text" value="{{book.author_last_name}}" placeholder="{{book.author_last_name}}" id="book_author_last_name" />
+      <input type="text" id="book_author_last_name" />
     </div>
 
     <div class="field">
       <label for="book_author_first_name">Author first name</label><br />
-      <input type="text" value="{{book.author_first_name}}" placeholder="{{book.author_first_name}}" id="book_author_first_name" />
+      <input type="text" id="book_author_first_name" />
     </div>
 
     <div class="field">
       <label for="book_ISBN">Isbn</label><br />
-      <input type="text" value="{{book.isbn}}" placeholder="{{book.isbn}}" id="book_isbn" />
+      <input type="text" id="book_isbn" />
     </div>
 
     <div class="radio_field">
@@ -39,14 +36,13 @@
 
     <div class="text_area">
       <label for="book_description">Description</label><br />
-      <textarea name="book[description]" id="book_description" cols="50">{{book.description}}
- </textarea>
+      <textarea name="book[description]" id="book_description" cols="50">
+      </textarea>
     </div>
 
     <b>Genre(s): </b>
     <div class="checkboxes">
 
-    
     <div id="all-genres">
     </div>
 
@@ -54,7 +50,7 @@
   </div>
   <br />
 
-  <button id="update-json" data-user="{{book.user_id}}" data-book="{{book.id}}" class="btn btn-primary btn-xs">Update This Book</button> 
+  <button id="create-book-btn" data-user="{{data.user.id}}" class="btn btn-primary btn-xs">Create This Book</button> 
   
 
 
