--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -17,15 +17,17 @@
   <p class='boxframe-desc'>{{book.description}}</p>
 
 
-  {{#if trade.book_first_trader_wants_id}}
+  {{#if trade.book_first_trader_wants_id}} <!-- if current_user needs to complete a trade with this user -->
   <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best)
   </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="complete-trade-btn">Complete a Trade</button>
-  {{else if trade.status}}
+
+  {{else if trade.status}} <!-- if current_user wants to create a new trade with this user -->
   <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 3 (3 is best)
   </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="request-trade-btn">Request a Trade</button>
-  {{else}} 
+
+  {{else}} <!-- if this is the current_user's book -->
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="edit-book-btn">Edit This Book</button>
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
   {{/if}}
